--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Han Li"
-  avatar           : "hollywood.png"
+  avatar           : "Han Li.jpg"
   bio              : "PhD Student of Computer Science"
   location         : "Los Angeles, California"
   employer         :
