--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Han Li"
   avatar           : "Han Li.jpg"
   bio              : "PhD Student of Computer Science"
-  location         : "Los Angeles, California"
+  location         : "Riverside, California"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
