--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Riverside, California"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : #"http://yourfullgooglescholarurl.com"
+  googlescholar    : https://scholar.google.com/citations?user=yJSqDQIAAAAJ&hl=en&authuser=1
   email            : han.li001@email.ucr.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
