--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Han Li"
   avatar           : "Han Li.jpg"
-  bio              : "PhD Student of Computer Science"
+  bio              : "CS PhD"
   location         : "Riverside, California"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
