--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Han Li"
-  avatar           : "Han Li.jpg"
+  avatar           : "hollywood.jpg"
   bio              : "CS PhD"
   location         : "Riverside, California"
   employer         :
