--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Han Li"
+  name             : "Han Li 李涵"
   avatar           : "images/HanLi.jpeg"
   bio              : "CS PhD"
   location         : "Riverside, California"
