--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Han Li 李涵"
-  avatar           : "images/HanLi.jpeg"
+  avatar           : "HanLi.jpeg"
   bio              : "CS PhD"
   location         : "Riverside, California"
   employer         :
